--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
     "@tailwindcss/vite": "^4.1.5",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.1.5"
-  }
+  },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
 }
+}
+
+
